--- a/pages/gm/dir.html
+++ b/pages/gm/dir.html
@@ -14,6 +14,24 @@
 <!--js逻辑-->
 <script src="../../lib/layui/layui.js"></script>
 <script>
+    versionMap={};
+    versionMap.colours=['#000000','#d04949','#474ead','#3197bd','#4aaa47','#bd4ace','#826006','#017b5a','    #ba2262','#20ad83','#6966ed'];
+    versionMap.iColourIndex=0;
+    versionMap.chooseColour=function (version) {
+        if (typeof(versionMap[version]) == "undefined") {
+            versionMap[version]=versionMap.colours[versionMap.iColourIndex];
+            if (versionMap.iColourIndex + 1 <= versionMap.colours.length - 1) {
+                versionMap.iColourIndex++;
+            } else {
+                versionMap.iColourIndex=0;
+            }
+        }
+        return versionMap[version];
+    };
+    function formatVersionColumn(data) {
+        return "<font color='"+versionMap.chooseColour(data)+"'>"+data+"</font>";
+    }
+
 	layui.use(["element", "table", "okLayer", "okUtils"], function () {
 		let table = layui.table;
 		let okLayer = layui.okLayer;
@@ -23,10 +41,10 @@
 		let dirTable = table.render({
 			elem: "#tableId",
             data: [
-                {"iZoneId": 1, "sZoneName": '1服', "sConnServer": '192.168.0.1:4000', "iZoneFlag": 1, "iIsManual": 1, "iManualZoneStatus": 1, "iMaxNum": 100, "iPublishTime": 1588925071, "iCurNum": 10, "iCurZoneStatus": 1, "iIsKick": 1, "sClientVersion": '1.0.0.1.0', "sForceUpdateVersion": '1.0.0', "sAndClientVersion": '1.0.0.1.0', "sAndForceUpdateVersion": '1.0.0'}
-                ,{"iZoneId": 2, "sZoneName": '2服', "sConnServer": '192.168.0.1:4001', "iZoneFlag": 1, "iIsManual": 1, "iManualZoneStatus": 1, "iMaxNum": 100, "iPublishTime": 1588925071, "iCurNum": 10, "iCurZoneStatus": 1, "iIsKick": 1, "sClientVersion": '1.0.0.1.0', "sForceUpdateVersion": '1.0.0', "sAndClientVersion": '1.0.0.1.0', "sAndForceUpdateVersion": '1.0.0'}
-                ,{"iZoneId": 3, "sZoneName": '3服', "sConnServer": '192.168.0.1:4001', "iZoneFlag": 1, "iIsManual": 1, "iManualZoneStatus": 1, "iMaxNum": 100, "iPublishTime": 1588925071, "iCurNum": 10, "iCurZoneStatus": 1, "iIsKick": 1, "sClientVersion": '1.0.0.1.0', "sForceUpdateVersion": '1.0.0', "sAndClientVersion": '1.0.0.1.0', "sAndForceUpdateVersion": '1.0.0'}
-                ,{"iZoneId": 4, "sZoneName": '4服', "sConnServer": '192.168.0.1:4001', "iZoneFlag": 1, "iIsManual": 1, "iManualZoneStatus": 1, "iMaxNum": 100, "iPublishTime": 1588925071, "iCurNum": 10, "iCurZoneStatus": 1, "iIsKick": 1, "sClientVersion": '1.0.0.1.0', "sForceUpdateVersion": '1.0.0', "sAndClientVersion": '1.0.0.1.0', "sAndForceUpdateVersion": '1.0.0'}
+                {"iZoneId": 1, "sZoneName": '1服', "sConnServer": '192.168.0.1:4000', "iZoneFlag": 1, "iIsManual": 1, "iManualZoneStatus": 1, "iMaxNum": 100, "iPublishTime": 1588925071, "iCurNum": 10, "iCurZoneStatus": 1, "iIsKick": 1, "sClientVersion": '1.0.0.1.1', "sForceUpdateVersion": '1.0.0', "sAndClientVersion": '1.0.0.1.0', "sAndForceUpdateVersion": '1.0.0'}
+                ,{"iZoneId": 2, "sZoneName": '2服', "sConnServer": '192.168.0.1:4001', "iZoneFlag": 2, "iIsManual": 0, "iManualZoneStatus": 2, "iMaxNum": 100, "iPublishTime": 1588925071, "iCurNum": 10, "iCurZoneStatus": 2, "iIsKick": 1, "sClientVersion": '1.0.0.1.0', "sForceUpdateVersion": '1.0.0', "sAndClientVersion": '1.0.0.1.0', "sAndForceUpdateVersion": '1.0.0'}
+                ,{"iZoneId": 3, "sZoneName": '3服', "sConnServer": '192.168.0.1:4001', "iZoneFlag": 3, "iIsManual": 1, "iManualZoneStatus": 3, "iMaxNum": 100, "iPublishTime": 1588925071, "iCurNum": 10, "iCurZoneStatus": 3, "iIsKick": 1, "sClientVersion": '1.0.0.1.0', "sForceUpdateVersion": '1.0.0', "sAndClientVersion": '1.0.0.1.1', "sAndForceUpdateVersion": '1.0.0'}
+                ,{"iZoneId": 4, "sZoneName": '4服', "sConnServer": '192.168.0.1:4001', "iZoneFlag": 4, "iIsManual": 1, "iManualZoneStatus": 4, "iMaxNum": 100, "iPublishTime": 1588925071, "iCurNum": 10, "iCurZoneStatus": 4, "iIsKick": 1, "sClientVersion": '1.0.0.1.2', "sForceUpdateVersion": '1.0.0', "sAndClientVersion": '1.0.0.1.0', "sAndForceUpdateVersion": '1.0.0'}
                 ,{"iZoneId": 5, "sZoneName": '5服', "sConnServer": '192.168.0.1:4001', "iZoneFlag": 1, "iIsManual": 1, "iManualZoneStatus": 1, "iMaxNum": 100, "iPublishTime": 1588925071, "iCurNum": 10, "iCurZoneStatus": 1, "iIsKick": 1, "sClientVersion": '1.0.0.1.0', "sForceUpdateVersion": '1.0.0', "sAndClientVersion": '1.0.0.1.0', "sAndForceUpdateVersion": '1.0.0'}
             ],
             text: {
@@ -40,19 +58,66 @@
 				{field: "iZoneId", title: "分区ID", width: 90, fixed: 'left'},
 				{field: "sZoneName", title: "分区名字", width: 90},
 				{field: "sConnServer", title: "ConnServer", width: 120},
-				{field: "iZoneFlag", title: "分区标识", width: 90},
-				{field: "iIsManual", title: "是否手动", width: 90},
-				{field: "iManualZoneStatus", title: "手动状态", width: 90},
+				{field: "iZoneFlag", title: "分区标识", width: 90, templet: function(d) {
+                    var ret = '';
+                    switch (d.iZoneFlag) {
+                    case 1: ret = '正常';break;
+                    case 2: ret = '新区';break;
+                    case 3: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">关闭</span>';break;
+                    case 4: ret = '审核';break;
+                    default:
+                        ret = '未知状态';
+                    }
+                    return ret;
+                }},
+				{field: "iIsManual", title: "是否手动", width: 90, templet: function(d) {
+                    return d.iIsManual == 1 ? '是' : '否';
+                }},
+				{field: "iManualZoneStatus", title: "手动状态", width: 90, templet: function(d) {
+                    var ret = '';
+                    switch (d.iManualZoneStatus) {
+                    case 1: ret = '畅通';break;
+                    case 2: ret = '拥挤';break;
+                    case 3: ret = '繁忙';break;
+                    case 4: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">维护</span>';break;
+                    default:
+                        ret = '未知状态';
+                    }
+                    return ret;
+                }},
 				{field: "iMaxNum", title: "最大人数", width: 90},
-				{field: "iPublishTime", title: "开区时间", width: 90},
+				{field: "iPublishTime", title: "开区时间", width: 90, templet: function(d) {
+                    var ret = okUtils.dateFormat(new Date(d.iPublishTime*1000), 'yyyy-MM-dd hh:mm:ss');
+                    if (new Date().getTime() < d.iPublishTime*1000) {
+                        ret = '<span class="layui-btn layui-btn-warm layui-btn-xs">'+ret+'</span>';
+                    }
+                    return ret;
+                }},
 				{field: "iCurNum", title: "当前在线", width: 90},
-				{field: "iCurZoneStatus", title: "当前状态", width: 90},
-				{field: "iIsKick", title: "强制下线", width: 90},
-				{field: "sClientVersion", title: "IOS客户端版本", width: 120},
-				{field: "sForceUpdateVersion", title: "IOS强制下线版本", width: 120},
-				{field: "sAndClientVersion", title: "AND客户端版本", width: 120},
-				{field: "sAndForceUpdateVersion", title: "AND强制下线版本", width: 120},
-				{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70}
+				{field: "iCurZoneStatus", title: "当前状态", width: 90, templet: function(d) {
+                    var ret = '';
+                    switch (d.iCurZoneStatus) {
+                    case 1: ret = '畅通';break;
+                    case 2: ret = '拥挤';break;
+                    case 3: ret = '繁忙';break;
+                    case 4: ret = '<span class="layui-btn layui-btn-danger layui-btn-xs">维护</span>';break;
+                    default:
+                        ret = '未知状态';
+                    }
+                    return ret;
+                }},
+				{field: "iIsKick", title: "强制下线", width: 90, templet: function(d) {
+                    return d.iIsKick == 1 ? '是' : '否';
+                }},
+				{field: "sClientVersion", title: "IOS客户端版本", width: 120, fixed: 'right', templet: function(d) {
+                    return formatVersionColumn(d.sClientVersion);
+                }},
+				{field: "sForceUpdateVersion", title: "IOS强制下线版本", width: 120, fixed: 'right'},
+				{field: "sAndClientVersion", title: "AND客户端版本", width: 120, fixed: 'right', templet: function(d) {
+                    return formatVersionColumn(d.sAndClientVersion);
+                }},
+				{field: "sAndForceUpdateVersion", title: "AND强制下线版本", width: 120, fixed: 'right'},
+				{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
 			]],
 		});
 
