--- a/pages/gm/channel.html
+++ b/pages/gm/channel.html
@@ -37,6 +37,7 @@
 				{field: "iChannel", title: "渠道", width: 90, fixed: 'left'},
 				{field: "sExe", title: "exe更新地址"},
 				{field: "sRes", title: "res更新地址"},
+				{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
 			]],
 		});
 
@@ -47,6 +48,18 @@
 					break;
 				case "batchDel":
 					batchDel();
+					break;
+			}
+		});
+
+		table.on("tool(tableFilter)", function (obj) {
+			let data = obj.data;
+			switch (obj.event) {
+				case "edit":
+					edit(data.id);
+					break;
+				case "del":
+					del(data.id);
 					break;
 			}
 		});
@@ -70,6 +83,22 @@
 				}
 			});
 		}
+
+		function edit(id) {
+			okLayer.open("编辑渠道", "dir-edit.html?id=" + id, "90%", "90%", null, function () {
+				dirTable.reload();
+			})
+		}
+
+		function del(id) {
+			okLayer.confirm("确定要删除吗？", function () {
+				okUtils.ajax("/gm/dir/deleteDir", "delete", {idsStr: id}, true).done(function (response) {
+					okUtils.tableSuccessMsg(response.msg);
+				}).fail(function (error) {
+					console.log(error)
+				});
+			})
+		}
 	})
 </script>
 <!-- 头工具栏模板 -->
@@ -78,6 +107,11 @@
 		<div class="layui-inline" lay-event="add"><i class="layui-icon layui-icon-add-1"></i></div>
 		<div class="layui-inline" lay-event="batchDel"><i class="layui-icon layui-icon-delete"></i></div>
 	</div>
+</script>
+
+<script type="text/html" id="operationTpl">
+	<a href="javascript:" title="编辑" lay-event="edit"><i class="layui-icon">&#xe642;</i></a>
+	<a href="javascript:" title="删除" lay-event="del"><i class="layui-icon">&#xe640;</i></a>
 </script>
 </body>
 </html>
