--- a/front/pages/login.html
+++ b/front/pages/login.html
@@ -10,7 +10,9 @@
 <body class="page-fill">
     <div class="page-fill" id="login">
         <form class="layui-form">
-            <div class="login_face"><img src="images/logo.png"></div>
+            <div class="layui-form-item login_face">
+                后台管理
+            </div>
             <div class="layui-form-item input-item">
                 <label for="username">用户名</label>
                 <input type="text" lay-verify="required" name="username" placeholder="请输入账号" autocomplete="off" id="username" class="layui-input">
@@ -18,11 +20,6 @@
             <div class="layui-form-item input-item">
                 <label for="password">密码</label>
                 <input type="password" lay-verify="required|password" name="password" placeholder="请输入密码" autocomplete="off" id="password" class="layui-input">
-            </div>
-            <div class="layui-form-item input-item captcha-box">
-                <label for="captcha">验证码</label>
-                <input type="text" lay-verify="required|captcha" name="captcha" placeholder="请输入验证码" autocomplete="off" id="captcha" maxlength="4" class="layui-input">
-                <div class="img ok-none-select" id="captchaImg"></div>
             </div>
             <div class="layui-form-item">
                 <button class="layui-btn layui-block" lay-filter="login" lay-submit="">登录</button>
@@ -36,29 +33,11 @@
     <!--js逻辑-->
     <script src="lib/layui/layui.js"></script>
     <script>
-        layui.use(["form", "okGVerify", "okUtils", "okLayer", "okCookie"], function () {
+        layui.use(["form", "okUtils", "okLayer", "okCookie"], function () {
             let form = layui.form;
             let $ = layui.jquery;
-            let okGVerify = layui.okGVerify;
             let okUtils = layui.okUtils;
             let okLayer = layui.okLayer;
-
-            /**
-             * 初始化验证码
-             */
-            let verifyCode = new okGVerify("#captchaImg");
-
-            /**
-             * 数据校验
-             */
-            form.verify({
-                password: [/^[\S]{6,12}$/, "密码必须6到12位，且不能出现空格"],
-                captcha: function (val) {
-                    /*if (verifyCode.validate(val) != "true") {
-                        return verifyCode.validate(val)
-                    }*/
-                }
-            });
 
             /**
              * 表单提交
