--- a/front/pages/index.html
+++ b/front/pages/index.html
@@ -32,8 +32,8 @@
                         bobi
                     </a>
                     <dl id="userInfo" class="layui-nav-child">
-                        <dd><a lay-id="u-2" href="javascript:" data-url="pages/member/user-info.html">基本资料</a></dd>
-                        <dd><a lay-id="u-3" href="javascript:" data-url="pages/member/user-pwd.html">安全设置</a></dd>
+                        <dd><a lay-id="u-2" href="javascript:" data-url="member/user-info.html">基本资料</a></dd>
+                        <dd><a lay-id="u-3" href="javascript:" data-url="member/user-pwd.html">安全设置</a></dd>
                         <dd>
                             <hr/>
                         </dd>
@@ -50,12 +50,6 @@
                 <div class="okadmin-logo">三国内网</div>
                 <!--左侧导航菜单-->
                 <ul id="navBar" class="layui-nav okadmin-nav okadmin-bg-20222A layui-nav-tree">
-                    <li class="layui-nav-item layui-this">
-                        <a href="javascript:" lay-id="1" data-url="console.html">
-                            <i is-close=false class="ok-icon">&#xe654;</i>
-                            控制台
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -89,7 +83,7 @@
 
                 <div id="tabContent" class="layui-tab-content ok-tab-content">
                     <div class="layui-tab-item layui-show">
-                        <iframe src='pages/console.html' frameborder="0" scrolling="yes" width="100%"
+                        <iframe src='console.html' frameborder="0" scrolling="yes" width="100%"
                                 height="100%"></iframe>
                     </div>
                 </div>
