--- a/front/pages/login.html
+++ b/front/pages/login.html
@@ -51,6 +51,7 @@
                     })
                 }).fail(function (error) {
                     console.log(error)
+                    window.location = "/index.html";
                 });
                 return false;
             });
