--- a/front/pages/index.html
+++ b/front/pages/index.html
@@ -29,7 +29,7 @@
                 <li class="no-line layui-nav-item">
                     <a href="javascript:">
                         <img src="images/avatar.png" class="layui-nav-img">
-                        bobi
+                        <label id="uname">bobi</label>
                     </a>
                     <dl id="userInfo" class="layui-nav-child">
                         <dd><a lay-id="u-2" href="javascript:" data-url="member/user-info.html">基本资料</a></dd>
