--- a/front/pages/system/user.html
+++ b/front/pages/system/user.html
@@ -32,8 +32,8 @@
 			cols: [[
 				{type: "checkbox", title: "序号", fixed: 'left'},
 				{field: "id", title: "用户ID", width: 90, fixed: 'left'},
-				{field: "name", title: "用户名字"},
 				{field: "username", title: "用户名"},
+        {field: "role", title: "角色"},
 				{title: "操作", width: 80, align: "center", templet: "#operationTpl", width: 70, fixed: 'right'}
 			]],
 		});
