--- a/front/pages/index.html
+++ b/front/pages/index.html
@@ -9,7 +9,6 @@
 	<link rel="stylesheet" href="lib/loading/okLoading.css" />
 </head>
 <body class="layui-layout-body">
-    <!-- 更换主体 Eg:orange_theme|blue_theme -->
     <div class="layui-layout layui-layout-admin okadmin blue_theme">
         <!--头部导航-->
         <div class="layui-header okadmin-header">
@@ -83,8 +82,7 @@
 
                 <div id="tabContent" class="layui-tab-content ok-tab-content">
                     <div class="layui-tab-item layui-show">
-                        <iframe src='console.html' frameborder="0" scrolling="yes" width="100%"
-                                height="100%"></iframe>
+                        <iframe src='console.html' frameborder="0" scrolling="yes" width="100%" height="100%"></iframe>
                     </div>
                 </div>
             </div>
