--- a/front/pages/system/user-add.html
+++ b/front/pages/system/user-add.html
@@ -58,6 +58,9 @@
         name: 'role',
         radio: true,
         clickClose: true,
+        prop: {
+          value: 'id',
+        },
         data: parent.roles
     });
 
