--- a/front/pages/system/user-add.html
+++ b/front/pages/system/user-add.html
@@ -61,6 +61,9 @@
         prop: {
           value: 'id',
         },
+        tips: '请选择用户角色',
+        layVerify: 'required',
+        layVerType: 'tips',
         data: parent.roles
     });
 
