--- a/front/pages/system/user-edit.html
+++ b/front/pages/system/user-edit.html
@@ -62,6 +62,9 @@
         prop: {
           value: 'id',
         },
+        tips: '请选择用户角色',
+        layVerify: 'required',
+        layVerType: 'tips',
         data: parent.roles
     });
 
