--- a/front/pages/member/user-pwd.html
+++ b/front/pages/member/user-pwd.html
@@ -9,30 +9,28 @@
 </head>
 <body class="childrenBody seting-pass">
 <form class="layui-form changePwd">
-	<div style="margin:0 0 15px 110px;color:#f00;">旧密码请输入“123456”，新密码必须两次输入一致才能提交</div>
 	<div class="layui-form-item">
 		<label class="layui-form-label">用户名</label>
 		<div class="layui-input-block">
-			<input type="text" value="智走" disabled class="layui-input layui-disabled">
+			<input type="text" name="username" disabled class="layui-input layui-disabled">
 		</div>
 	</div>
 	<div class="layui-form-item">
 		<label class="layui-form-label">旧密码</label>
 		<div class="layui-input-block">
-			<input type="password" value="" placeholder="请输入旧密码" lay-verify="required|oldPwd" class="layui-input pwd">
+			<input type="password" name="oldpassword" value="" placeholder="请输入旧密码" lay-verify="required" lay-verType="tips" class="layui-input pwd">
 		</div>
 	</div>
 	<div class="layui-form-item">
 		<label class="layui-form-label">新密码</label>
 		<div class="layui-input-block">
-			<input type="password" value="" placeholder="请输入新密码" lay-verify="required|pass" id="oldPwd"
-			       class="layui-input pwd">
+			<input type="password" name="password" placeholder="请输入新密码" lay-verify="required|password" lay-verType="tips" class="layui-input pwd">
 		</div>
 	</div>
 	<div class="layui-form-item">
 		<label class="layui-form-label">确认密码</label>
 		<div class="layui-input-block">
-			<input type="password" value="" placeholder="请确认密码" lay-verify="required|confirmPwd" class="layui-input pwd">
+			<input type="password" name="password2" placeholder="请确认密码" lay-verify="required|password2" lay-verType="tips" class="layui-input pwd">
 		</div>
 	</div>
 	<div class="layui-form-item">
@@ -42,7 +40,35 @@
 		</div>
 	</div>
 </form>
-<script type="text/javascript" src="../../lib/layui/layui.js"></script>
-<script type="text/javascript" src="user-pwd.js"></script>
+<script type="text/javascript" src="/lib/layui/layui.js"></script>
+<script type="text/javascript">
+  layui.use(['form', 'layer'], function () {
+  	var form = layui.form,
+  		layer = layui.layer,
+  		$ = layui.jquery,
+  		$form = $('form');
+  	okLoading.close();
+
+    $("input[name='username']").val(localStorage.getItem("username"));
+
+    form.verify({
+      password: [
+        /^[\S]{6,12}$/
+        ,'密码必须6到12位，且不能出现空格'
+      ],
+      password2: function(value, item) {
+        if (value != $("input[name='password']").val()) {
+          return '两次输入密码不一致';
+        }
+      }
+    });
+  
+  	//修改密码
+  	form.on("submit(changePwd)", function (data) {
+      console.log(data.field);
+  		return false;
+  	})
+  });
+</script>
 </body>
 </html>
