--- a/front/pages/index.html
+++ b/front/pages/index.html
@@ -31,7 +31,7 @@
                         <label id="uname">bobi</label>
                     </a>
                     <dl id="userInfo" class="layui-nav-child">
-                        <dd><a lay-id="u-3" href="javascript:" data-url="member/user-pwd.html">安全设置</a></dd>
+                        <dd><a lay-id="u-3" href="javascript:" data-url="system/user-pwd.html">安全设置</a></dd>
                         <dd>
                             <hr/>
                         </dd>
