--- a/front/pages/gm/gm.html
+++ b/front/pages/gm/gm.html
@@ -9,44 +9,71 @@
 </head>
 <body>
 <div class="ok-body">
-    <form class="layui-form" action="">
-        <div class="layui-form-item" style="margin:0px">
-            <div class="layui-inline" style="margin:0px">
-                <div class="layui-input-inline">
-                <select name="zoneid" lay-verify="required" lay-verType="tips">
-                    <option value="">请选择服务器</option>
-                    <option value="1">一服</option>
-                    <option value="2">二服</option>
-                </select>
-                </div>
-                <div class="layui-input-inline">
-                <button class="layui-btn" lay-submit lay-filter="gm">执行</button>
-                </div>
-            </div>
+  <form class="layui-form" action="">
+    <div class="layui-form-item" style="margin:0px">
+      <div class="layui-inline" style="margin:0px">
+        <div class="layui-input-inline">
+          <div id="zoneSelect"></div>
         </div>
-        <div class="layui-form-item" style="margin:0px">
-            <textarea name="cmd" placeholder="help" lay-verify="required" lay-verType="tips" class="layui-textarea" rows="5"></textarea>
+        <div class="layui-input-inline">
+        <button class="layui-btn" lay-submit lay-filter="gm">执行</button>
         </div>
-        <div class="layui-form-item" style="margin:0px">
-            <textarea name="result" class="layui-textarea" rows="25" disabled></textarea>
-        </div>
-    </form>
+      </div>
+    </div>
+    <div class="layui-form-item" style="margin:0px">
+      <textarea name="cmd" placeholder="help" lay-verify="required" lay-verType="tips" class="layui-textarea" rows="5"></textarea>
+    </div>
+    <div class="layui-form-item" style="margin:0px">
+      <textarea name="result" class="layui-textarea" rows="25" disabled></textarea>
+    </div>
+  </form>
 </div>
 <!--js逻辑-->
 <script src="/lib/layui/layui.js"></script>
+<script type="text/javascript" src="/lib/xm-select/xm-select.js"></script>
 <script>
     layui.use(['form', 'okUtils'], function(){
       let form = layui.form;
       let okUtils = layui.okUtils;
       let $ = layui.jquery;
+      let xmSelect = layui.xmSelect;
 		  okLoading.close();
 
-      form.on('submit(gm)', function(data){
-        console.log(data.field);
+      let zoneSelect = xmSelect.render({
+        el: '#zoneSelect',
+        name: 'zoneid',
+        prop: {
+          value: 'iZoneId',
+          name: 'sZoneName',
+        },
+        tips: '请选择一个服务器',
+        layVerify: 'required',
+        layVerType: 'tips',
+        radio: true,
+        clickClose: true,
+        model: {
+          label: {
+            type: 'block',
+            block: {
+              //是否显示删除图标
+              showIcon: false,
+            }
+          }
+        }
+      });
 
-        let zoneid = 2;
+      okUtils.ajax("/api/gm/zone/simplelist", "get", null, false).done(function (response) {
+        zoneSelect.update({
+          data: response.data,
+        });
+      }).fail(function (error) {
+        console.log(error);
+      });
+
+      form.on('submit(gm)', function(data){
+        let zoneid = zoneSelect.getValue('valueStr');
         let cmd = $("textarea[name='cmd']").val();
-        okUtils.ajax("/api/gm/cmd", "post", {zoneid: zoneid, cmd: cmd}, true).done(function (response) {
+        okUtils.ajax("/api/gm/game/cmd", "post", {zoneid: zoneid, cmd: cmd}, true).done(function (response) {
           $("textarea[name=result]").val(response.data);
 		    }).fail(function (error) {
           $("textarea[name=result]").val(error.msg);
