--- a/front/pages/gm/dir-add.html
+++ b/front/pages/gm/dir-add.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>新增分区</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="../../css/oksub.css">
+	<link rel="stylesheet" href="/css/oksub.css">
 </head>
 <body>
 <div class="ok-body">
@@ -117,32 +117,41 @@
 		</div>
 	</form>
 </div>
-<script src="../../lib/layui/layui.js"></script>
+<script src="/lib/layui/layui.js"></script>
 <script>
     // https://www.layui.com/doc/modules/form.html
-    layui.use(['form', 'laydate'], function(){
-      var form = layui.form;
-	  var laydate = layui.laydate;
+    layui.use(['form', 'laydate', 'okUtils', 'okLayer'], function(){
+      let form = layui.form;
+	    let laydate = layui.laydate;
+      let okUtils = layui.okUtils;
+      let okLayer = layui.okLayer;
 
       laydate.render({elem: "#iPublishTime", type: "datetime"});
 
       //数据校验
       form.verify({
         "version": function(value, item) {
-            var v = value.split('.');
-            var l = 5;
-            if (item.name.indexOf('Force') != -1) {
-                l = 3;
-            }
-            if (v.length != l) {
-                return '版本号格式不对';
-            }
+          let v = value.split('.');
+          let l = 5;
+          if (item.name.indexOf('Force') != -1) {
+              l = 3;
+          }
+          if (v.length != l) {
+              return '版本号格式不对';
+          }
         }
       });
 
       //监听提交
       form.on('submit(add)', function(data){
-        layer.msg(JSON.stringify(data.field));
+        data.field.iPublishTime = Date.parse(data.field.iPublishTime)/1000;
+        okUtils.ajax("/api/gm/zone/add", "post", data.field, true).done(function (response) {
+          okLayer.greenTickMsg(response.data, function () {
+			  		parent.layer.close(parent.layer.getFrameIndex(window.name));
+			  	});
+		    }).fail(function (error) {
+            console.log(error);
+        });
         return false;
       });
     });
